--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           </blockquote>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="#about" class="btn-get-started">Login Here</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Register</span></a>
+            
+            <a href="#" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-arrow-bar-right"></i><span>Register</span></a>
           </div>
 
         </div>
