Finished the basic frontend for the love lense software

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h2 data-aos="fade-up">Your Love Lens</h2>
           <blockquote data-aos="fade-up" data-aos-delay="100">
             <p>
-              "Focusing on What Matters in Love and Life"
+              "Focusing on What Matters in Love and Life. We give you the opportunity to see live from the standpoint of LOVE and other things that matters in building sucessful relationships"
             </p>
           </blockquote>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
